manifests-app-proj/base/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-web
  namespace: gitops-demo
  labels:
    app.kubernetes.io/name: customer-web
    app.kubernetes.io/part-of: ocp-gitops-demo
spec:
  replicas: 5
  selector:
    matchLabels:
      app.kubernetes.io/name: customer-web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: customer-web
        app.kubernetes.io/part-of: ocp-gitops-demo
    spec:
      containers:
        - name: web
          image: harbor.skyr.dca.scc/gitops/customer-web:0.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 10
            initialDelaySeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 20
            initialDelaySeconds: 10
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
