manifests-app-proj/base/postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: gitops-demo
  labels:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/part-of: ocp-gitops-demo
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: postgres
  template:
    metadata:
      labels:
        app.kubernetes.io/name: postgres
        app.kubernetes.io/part-of: ocp-gitops-demo
    spec:
      serviceAccountName: postgres-db
      containers:
        - name: postgres
          image: harbor.skyr.dca.scc/gitops/postgresql-15:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/pgsql/data
      securityContext:
        fsGroup: 26
        runAsUser: 26
  volumeClaimTemplates:
    - metadata:
        name: pgdata
      spec:
        accessModes: ["ReadWriteMany"]
        storageClassName: ocs-storagecluster-cephfs
        resources:
          requests:
            storage: 5Gi
