manifests-app-proj/base/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer-web
  namespace: gitops-demo
  labels:
    app.kubernetes.io/name: customer-web
    app.kubernetes.io/part-of: ocp-gitops-demo
spec:
  selector:
    app.kubernetes.io/name: customer-web
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
