manifests-app-proj/base/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: gitops-demo
  labels:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/part-of: ocp-gitops-demo
spec:
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
  clusterIP: None
  selector:
    app.kubernetes.io/name: postgres
